--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
 </head>
 <body>
 	<div class="container-fluid mx-auto">
-		<nav class="navbar navbar-expand-md bg-dark navbar-dark justify-content-center">
+	<div class="row bg-dark mx-0">
+	<div class="col-md-2 col-sm-10 col-10">
 			<a class="nav-branch" href="#"><img class="rounded-circle" src="./pub-asset/images/logo-branch.png" alt="title" width="50px"></a>
+			</div>
+			<div class="col-md-10 col-sm-2 col-2">
+			<nav class="navbar bg-dark navbar-dark navbar-expand-md">
+			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#01">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="navbar-collapse collapse" id="01">
 			<ul class="navbar-nav">
 				<li class="nav-item">
 					<a class="nav-link text-white" href="#">Trang chủ</a>
@@ -52,8 +60,11 @@
 				<li class="nav-item">
 					<a class="nav-link " href="#"><img class="rounded-circle" src="./pub-asset/images/logo-usa.png" title="..." alt="title" width="20px"></a>
 				</li>
+				</div>
 			</ul>
+			</div>
 		</nav>
+		</div>
 		<div id ="crs-slide" class="carousel slide" style="height:300px" data-ride="carousel">
 			<ul class="carousel-indicators mg-top-crs01">
 				<li class="active" data-target="#crs-slide" data-slide-to="0" style="background-color:black"></li>
@@ -94,22 +105,22 @@
 			</a>
 		</div>
 		<div class="row row-mt01 justify-content-center">
-			<div class="col col-md-2 bd-line01 mr-1 text-center pad-50" style="border-style:dotted">
+			<div class="col-12 col-md-2 bd-line01 mr-1 text-center pad-50 col-sm-12" style="border-style:dotted">
 				<h3>Thuốc lá bổ phổi</h3>
 				<p>Thuốc con ngựa có con con ngựa trên thuốc</p>
 				<img src="./pub-asset/images/logo-branch.png" class="img-fluid" height="125px">
 			</div>
-			<div class="col col-md-2 bd-line01 mr-1 text-center pad-50"style="border-style:dotted">
+			<div class="col-12 col-md-2 bd-line01 mr-1 text-center pad-50 col-sm-12"style="border-style:dotted">
 				<h3>Thuốc lá bổ phổi</h3>
 				<p>Thuốc con ngựa có con con ngựa trên thuốc</p>
 				<img src="./pub-asset/images/logo-branch.png" class="img-fluid" height="125px">
 			</div>
-			<div class="col col-md-2 bd-line01 mr-1 text-center pad-50"style="border-style:dotted">
+			<div class="col-12 col-md-2 bd-line01 mr-1 text-center pad-50 col-sm-12"style="border-style:dotted">
 				<h3>Thuốc lá bổ phổi</h3>
 				<p>Thuốc con ngựa có con con ngựa trên thuốc</p>
 				<img src="./pub-asset/images/logo-branch.png" class="img-fluid" height="125px">
 			</div>
-			<div class="col col-md-2 bd-line01 mr-1 text-center pad-50"style="border-style:dotted">
+			<div class="col-12 col-md-2 bd-line01 mr-1 text-center pad-50 col-sm-12"style="border-style:dotted">
 				<h3>Thuốc lá bổ phổi</h3>
 				<p>Thuốc con ngựa có con con ngựa trên thuốc</p>
 				<img src="./pub-asset/images/logo-branch.png" class="img-fluid" height="125px">
@@ -117,8 +128,9 @@
 			
 		</div>
 		<div class="row bg-dark text-white justify-content-center pd-topbot30 no-mg" height="100px">
-			<h3 class="col col-md-12 text-center">KHÁCH HÀNG TRUYỀN THỐNG</h3>
-			<div class="d-flex justify-content-center">
+			<h3 class="col-md-12 text-center col-12 col-sm-12">KHÁCH HÀNG TRUYỀN THỐNG</h3>
+			<div class="row">
+			<div class=" justify-content-center col-sm-12">
 				<img src="./pub-asset/images/logo-branch.png" class=" mr-1" height="60px">
 				<img src="./pub-asset/images/logo-branch.png" class=" mr-1" height="60px">
 				<img src="./pub-asset/images/logo-branch.png" class=" mr-1" height="60px">
@@ -127,6 +139,7 @@
 				<img src="./pub-asset/images/logo-branch.png" class=" mr-1" height="60px">
 				<img src="./pub-asset/images/logo-branch.png" class=" mr-1" height="60px">
 				<img src="./pub-asset/images/logo-branch.png" class=" mr-1" height="60px">
+			</div>
 			</div>
 		</div>
 		<div class="row justify-content-center">
