--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 <body>
 	<div class="container-fluid mx-auto">
 	<div class="row bg-dark mx-0">
-	<div class="col-md-2 col-sm-10 col-10">
+	<div class="col-md-2 col-sm-6 col-10">
 			<a class="nav-branch" href="#"><img class="rounded-circle" src="./pub-asset/images/logo-branch.png" alt="title" width="50px"></a>
 			</div>
-			<div class="col-md-10 col-sm-2 col-2">
-			<nav class="navbar bg-dark navbar-dark navbar-expand-md">
-			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#01">
+			<div class="col-md-10 col-sm-6 col-2">
+			<nav class="navbar bg-dark navbar-dark navbar-expand-sm">
+			<button class="navbar-toggler fixed-right" type="button" data-toggle="collapse" data-target="#nav01" aria-controls="nav01" aria-expanded="false">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="navbar-collapse collapse" id="01">
+			<div class="navbar-collapse collapse" id="nav01">
 			<ul class="navbar-nav">
 				<li class="nav-item">
 					<a class="nav-link text-white" href="#">Trang chủ</a>
